--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,13 @@ body {
 	clear: both;
 	display: table;
 }
+td, th {
+	text-align: center;
+	padding-left: 12px;
+	padding-right: 12px;
+	padding-top: 4px;
+	padding-bottom: 4px;
+}
 #shape {
 	margin-top: 5px;
 }
